changes the image cropping and fixes multi comments bug

--- a/app/assets/stylesheets/public/public_gallery.css.scss
+++ b/app/assets/stylesheets/public/public_gallery.css.scss
@@ -112,7 +112,6 @@ body {
   padding-top: 0;
   padding-left: 20px;
   width: 180px;
-  height: 640px; 
   overflow-y: scroll;
   font-size: 12px;
 
